--- a/.gitignore
+++ b/.gitignore
@@ -35,16 +35,27 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# amplify
+# vs code
+/.vscode
+
+#amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/mock-api-resources
 amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
+amplify/backend/.temp
 build/
 dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
-
-# vs code
-/.vscode
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
