--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "aws-amplify": "^5.0.8",
+    "emotion": "^11.0.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   }
 }
