--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,4 +1,7 @@
 {
+  "providers": [
+    "awscloudformation"
+  ],
   "projectName": "carousel",
   "version": "3.1",
   "frontend": "javascript",
@@ -7,11 +10,8 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "build",
-      "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start"
+      "BuildCommand": "next build",
+      "StartCommand": "next start"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
